// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly default unit is inches 1`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        <span
          class="value"
        >
          1.000", 1.000"
        </span>
      </p>
      <div
        class="tool-panel-body"
      >
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_width
            unit:
            mm
            min:
            0
            max:
            400
            defaultValue:
            25.4
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_height
            unit:
            mm
            min:
            0
            max:
            375
            defaultValue:
            25.4
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is inches 2`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        <span
          class="value"
        >
          1.000", 1.000"
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_width
            unit:
            mm
            min:
            0
            max:
            400
            defaultValue:
            25.4
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_height
            unit:
            mm
            min:
            0
            max:
            375
            defaultValue:
            25.4
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is inches 3`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        <span
          class="value"
        >
          10.000", 10.000"
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_width
            unit:
            mm
            min:
            0
            max:
            400
            defaultValue:
            254
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_height
            unit:
            mm
            min:
            0
            max:
            375
            defaultValue:
            254
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is inches 4`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        <span
          class="value"
        >
          3.937", 10.000"
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_width
            unit:
            mm
            min:
            0
            max:
            400
            defaultValue:
            100
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_height
            unit:
            mm
            min:
            0
            max:
            375
            defaultValue:
            254
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is inches 5`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        <span
          class="value"
        >
          3.937", 3.937"
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_width
            unit:
            mm
            min:
            0
            max:
            400
            defaultValue:
            100
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_height
            unit:
            mm
            min:
            0
            max:
            375
            defaultValue:
            100
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is mm 1`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        <span
          class="value"
        >
          25.4, 25.4 mm
        </span>
      </p>
      <div
        class="tool-panel-body"
      >
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_width
            unit:
            mm
            min:
            0
            max:
            400
            defaultValue:
            25.4
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <span
            class="text-center header"
          />
          <div>
            mock-unit-input id:
            array_height
            unit:
            mm
            min:
            0
            max:
            375
            defaultValue:
            25.4
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
